--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
     "django>=6.0",
+    "gunicorn>=23.0.0",
+    "whitenoise>=6.11.0",
 ]
 
 [dependency-groups]
@@ -14,3 +16,6 @@ dev = [
     "ruff>=0.14.10",
     "ty>=0.0.7",
 ]
+
+[tool.deptry.per_rule_ignores]
+DEP002 = ["gunicorn", "whitenoise"]
