--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,12 @@
+x-common-env: &common-env
+  DEBUG: 0
+  MODAL_TOKEN_ID: ${MODAL_TOKEN_ID}
+  MODAL_TOKEN_SECRET: ${MODAL_TOKEN_SECRET}
+  AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
+  AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
+  AWS_S3_REGION: ${AWS_S3_REGION:-us-east-1}
+  AWS_S3_BUCKET_NAME: ${AWS_S3_BUCKET_NAME}
+
 services:
   web:
     build: .
@@ -6,14 +15,18 @@ services:
     volumes:
       - sqlite_data:/app/db
     environment:
-      - DEBUG=0
-      - ALLOWED_HOSTS=localhost,127.0.0.1,u4084wwksc8og0woo844s80w.136.243.151.98.sslip.io
-      - MODAL_TOKEN_ID=${MODAL_TOKEN_ID}
-      - MODAL_TOKEN_SECRET=${MODAL_TOKEN_SECRET}
-      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
-      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
-      - AWS_S3_REGION=${AWS_S3_REGION:-us-east-1}
-      - AWS_S3_BUCKET_NAME=${AWS_S3_BUCKET_NAME}
+      <<: *common-env
+      ALLOWED_HOSTS: localhost,127.0.0.1,u4084wwksc8og0woo844s80w.136.243.151.98.sslip.io
+
+  worker:
+    build: .
+    command: python manage.py db_worker
+    volumes:
+      - sqlite_data:/app/db
+    environment:
+      <<: *common-env
+    depends_on:
+      - web
 
 volumes:
   sqlite_data:
