update public file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ x-shared-env: &shared-env
   AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
   AWS_S3_REGION: ${AWS_S3_REGION:-us-east-1}
   AWS_S3_BUCKET_NAME: ${AWS_S3_BUCKET_NAME}
+  AWS_S3_BUCKET_URL_PREFIX: ${AWS_S3_BUCKET_URL_PREFIX}
 
 services:
   web:
