--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,9 @@ dependencies = [
 dev = [
   "deptry>=0.24.0",
   "django-stubs[compatible-mypy]>=5.2.8",
+  "mypy>=1.19.1",
+  "pyright>=1.1.407",
   "ruff>=0.14.10",
-  "ty>=0.0.7",
 ]
 
 [tool.deptry.per_rule_ignores]
@@ -32,6 +33,5 @@ extend-exclude = ["scripts"]
 [tool.deptry]
 extend_exclude = ["scripts"]
 
-
-[tool.ty.src]
-exclude = ["scripts"]
+[tool.pyright]
+exclude = ["scripts", ".venv", "db"]
