--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ dependencies = [
   "feedparser>=6.0.0",
   "boto3>=1.35.0",
   "django-tasks>=0.10.0",
+  "openai>=2.14.0",
+  "pydantic>=2.12.5",
 ]
 
 [dependency-groups]
