--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
   "django-tasks>=0.10.0",
   "openai>=2.14.0",
   "pydantic>=2.12.5",
+  "tenacity>=9.1.2",
 ]
 
 [dependency-groups]
